--- a/style.css
+++ b/style.css
@@ -31,19 +31,17 @@ canvas {
   background: url("Assets/Logo.png") no-repeat center;
   background-size: contain;
   width: 100%;
-  max-width: 90vh;
-  aspect-ratio: 2 / 1;
-  height: fit-content;
+  height: 140px;
   display: inline-block;
-  border: none;
-  box-shadow: none;
   pointer-events: none;
+  margin: 50px 0 0 0;
+  padding: 0;
 }
 
 .splash {
   position: absolute;
   top: 65%;
-  left: 100%;
+  left: 80%;
   transform: translate(-50%, -50%) rotate(-20deg);
   width: auto;
   max-width: 80%;
@@ -75,34 +73,40 @@ canvas {
   pointer-events: none;
 }
 
-.mcbutton {
+.MC-Btn {
   background: url("Assets/button.png") no-repeat center;
   background-size: contain;
-  width: 100%;
+  width: 650px;
   height: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: none;
+  display: inline-block;
+  pointer-events: auto;
+  margin: 0;
+  padding: 0;
   cursor: pointer;
+  filter: brightness(125%);
 }
 
-.mcbutton:hover {
+.MC-Btn-text {
+  font-family: "MinecraftiaRegular", sans-serif;
+  color: #fff;
+  text-shadow: 2px 2px 4px #000000;
+  font-size: 1.2rem;
+  line-height: 50px;
+  display: block;
+  text-align: center;
+  user-select: none;
+  text-decoration: none;
+  padding-top: 8px;
+}
+
+.MC-Btn:hover {
   background: url("Assets/button_highlighted.png") no-repeat center;
   background-size: contain;
-  filter: brightness(1.2);
-}
-
-.mcbutton a {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-  color: whitesmoke;
-  text-decoration: none;
-  font-family: "MinecraftiaRegular", sans-serif;
-  font-size: 1.2rem;
-  text-shadow: 2px 2px 4px #000000;
-  background: none; /* Important! */
+  width: 650px;
+  height: 50px;
+  display: inline-block;
+  pointer-events: auto;
+  margin: 0;
+  padding: 0;
+  cursor: pointer;
 }
