--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ canvas {
   font-family: "MinecraftiaRegular", sans-serif;
   color: #fff;
   text-shadow: 2px 2px 4px #000000;
-  font-size: 1.2rem;
+  font-size: 1rem;
   line-height: 50px;
   display: block;
   text-align: center;
@@ -104,4 +104,108 @@ canvas {
   margin: 0;
   padding: 0;
   cursor: pointer;
+}
+
+.MC-Btn-sm {
+  background: url("Assets/button_sm.png") no-repeat center;
+  background-size: contain;
+  width: 55px;
+  min-width: 55px;
+  height: 50px;
+  display: inline-block;
+  pointer-events: auto;
+  margin: 0;
+  padding: 0;
+  cursor: pointer;
+  filter: brightness(125%);
+}
+
+.MC-Btn-md {
+  background: url("Assets/button_md.png") no-repeat center;
+    background-size: contain;
+  width: 215px;
+  min-width: 215px;
+  height: 50px;
+  display: inline-block;
+  pointer-events: auto;
+  margin: 0;
+  padding: 0;
+  cursor: pointer;
+  filter: brightness(125%);
+}
+
+.MC-Btn-sm:hover {
+  background: url("Assets/button_highlighted_sm.png") no-repeat center;
+  background-size: contain;
+  width: 55px;
+  min-width: 55px;
+  height: 50px;
+  display: inline-block;
+  pointer-events: auto;
+  margin: 0;
+  padding: 0;
+  cursor: pointer;
+}
+
+.MC-Btn-md:hover {
+  background: url("Assets/button_highlighted_md.png") no-repeat center;
+    background-size: contain;
+  width: 215px;
+  min-width: 215px;
+  height: 50px;
+  display: inline-block;
+  pointer-events: auto;
+  margin: 0;
+  padding: 0;
+  cursor: pointer;
+}
+
+.MC-Btn-text-sm {
+  font-family: "MinecraftiaRegular", sans-serif;
+  color: #fff;
+  text-shadow: 2px 2px 4px #000000;
+  font-size: 1rem;
+  line-height: 50px;
+  display: block;
+  text-align: center;
+  user-select: none;
+  text-decoration: none;
+  padding-top: 8px;
+}
+
+.MC-Btn-text-md {
+  font-family: "MinecraftiaRegular", sans-serif;
+  color: #fff;
+  text-shadow: 2px 2px 4px #000000;
+  font-size: 1rem;
+  line-height: 50px;
+  display: block;
+  text-align: center;
+  user-select: none;
+  text-decoration: none;
+  padding-top: 8px;
+}
+
+.Icon-GitHub {
+  background: url("Assets/github-ico.png") no-repeat center;
+  background-size: contain;
+  width: 38px;
+  height: 38px;
+  display: block;
+  pointer-events: none;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 6px;
+}
+
+.Icon-Resume {
+  background: url("Assets/draft_report.png") no-repeat center;
+  background-size: contain;
+  width: 34px;
+  height: 34px;
+  display: block;
+  pointer-events: none;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 12px;
 }
