--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@ canvas {
   
 } */
 
-
 .custom-box {
   background-color: #c8c8c8;
   border-radius: 6px;
@@ -141,7 +140,6 @@ canvas {
     left: 105%;
   }
 }
-
 
 .mlogo {
   background: url("Assets/Logo.png") no-repeat center;
@@ -434,4 +432,34 @@ canvas {
   mask-size: cover;
 
   background: #000; /* doesn’t matter, the mask controls visibility */
+}
+
+.MC-boxData {
+  width: 100%;
+  height: 100%;
+  background-color: #100210d1;
+  border: 4px solid #100210;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+  border-radius: 6px;
+  image-rendering: pixelated;
+  image-rendering: crisp-edges;
+  color: gold;
+  font-family: "MinecraftiaRegular", sans-serif;
+  padding: 16px;
+}
+
+.progbar-BG {
+  background-image: url(textures/experience_bar_background.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  border: 2px solid #000;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+}
+.Progbar-Gold {
+  background-color: #00ff00;
+  image-rendering: pixelated;
+  image-rendering: crisp-edges;
+  background-blend-mode: multiply;
+  opacity: 0.7;
 }
