--- a/style.css
+++ b/style.css
@@ -83,6 +83,22 @@ canvas {
   min-width: 0;
 }
 
+.tooltip {
+  font-family: "MinecraftiaRegular", sans-serif;
+  font-size: 16px;
+  background-color: #100210d1;
+  border: 4px solid #100210;
+  border-radius: 6px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+  transition: opacity 0.3s;
+  color: gold;
+  z-index: 1000;
+  width: fit-content;
+  max-width: 300px;
+  height: auto;
+  padding: 8px;
+}
+
 .item-slot:hover .mc-tooltip {
   visibility: visible;
   opacity: 1;
@@ -173,7 +189,7 @@ canvas {
 }
 
 .loading-overlay {
-  background-color: #ef2e3b;
+  background-color: rgb(239, 46, 59);
   color: white;
   font-family: "Mojang", sans-serif;
   text-shadow: 2px 2px 4px #000000;
