--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ canvas {
   
 } */
 
-.MainLOGO{
+.MainLOGO {
   background-image: url("./Assets/Logo.png");
   background-size: contain;
   background-repeat: no-repeat;
@@ -72,7 +72,6 @@ canvas {
   width: 300px;
   height: 50px;
   image-rendering: pixelated;
-  
 }
 
 .mc-btn {
@@ -87,6 +86,34 @@ canvas {
   position: relative;
   filter: brightness(125%);
   cursor: pointer;
+}
+
+.n-mc-btn {
+  background-image: url(./Assets/button.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100% 100%;
+  image-rendering: pixelated;
+  position: relative;
+  filter: brightness(125%);
+  font-family: "MinecraftiaRegular", sans-serif;
+  cursor: pointer;
+}
+
+.n-mc-btn p {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin-top: 5px;
+  font-size: 16px;
+  color: white;
+  text-shadow: 1px 1px 2px black;
+  pointer-events: none;
+}
+
+.n-mc-btn:hover {
+  background-image: url(./Assets/button_highlighted.png);
 }
 
 .mc-btn p,
@@ -122,7 +149,6 @@ canvas {
   font-family: "MinecraftiaRegular", sans-serif;
   cursor: pointer;
 }
-
 
 .mc-btn-md {
   background-image: url(./Assets/button_md.png);
@@ -167,15 +193,54 @@ canvas {
   margin-top: 5px;
 }
 
-.Icon-GitHub-down, .Icon-Resume-down{
+.Icon-GitHub-down,
+.Icon-Resume-down {
   margin-left: 50px;
 }
-.Icon-GitHub-down p{
+.Icon-GitHub-down p {
   margin-left: 15px;
   margin-top: 5px;
 }
 
-.Icon-Resume-down p{
+.Icon-Resume-down p {
   margin-left: 20px;
   margin-top: 5px;
 }
+
+@media (max-width: 400px) {
+  .n-mc-btn p {
+    margin-top: 0;
+  }
+
+  .mc-btn-md p {
+    margin-top: 0 !important;
+  }
+
+  .splashtext {
+    font-size: clamp(1.5vh, 3vw, 2.5vh);
+    right: -20%;
+    bottom: 40px;
+  }
+
+  .Icon-GitHub-down,
+  .Icon-Resume-down {
+    margin-left: 25px;
+  }
+}
+
+.tooltip {
+  font-family: "MinecraftiaRegular", sans-serif;
+  font-size: 16px;
+  background-color: #100210d1;
+  border: 4px solid #100210;
+  border-radius: 6px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+  transition: opacity 0.3s;
+  color: gold;
+  z-index: 1000;
+  width: fit-content;
+  max-width: 300px;
+  height: auto;
+  padding: 8px;
+}
+
