--- a/style.css
+++ b/style.css
@@ -300,7 +300,7 @@ canvas {
   border-left: 4px solid #414141;
   border-right: 4px solid #fff;
   border-bottom: 4px solid #fff;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.307);
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.307);
 }
 
 .slot-inv {
@@ -315,6 +315,12 @@ canvas {
 }
 
 .small-slot {
+  border-top: 2px solid #414141;
+  border-left: 2px solid #414141;
+  border-right: 2px solid #fff;
+  border-bottom: 2px solid #fff;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.307);
+
   display: inline-block;
   box-sizing: border-box;
   width: 32px;
@@ -323,6 +329,8 @@ canvas {
   min-height: 32px;
   max-width: 32px;
   max-height: 32px;
+
+  cursor: not-allowed;
 }
 
 .small-h-slot {
@@ -368,10 +376,10 @@ canvas {
   width: 100%;
   height: 100%;
   object-fit: contain;
-  margin-top: -15px;
+  margin-top: -10px;
   image-rendering: pixelated;
+  cursor: not-allowed;
 }
-
 
 .mc-xp-container {
   width: 100%;
@@ -554,6 +562,7 @@ canvas {
   gap: 8px;
   padding: 8px;
   border-bottom: 2px solid gray;
+  cursor: help;
 }
 
 /* Remove bottom border if it's the last hint-box-container */
@@ -593,4 +602,21 @@ canvas {
 }
 .hint-content::-webkit-scrollbar {
   display: none;
+}
+
+.mobileoverlay {
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+  color: white;
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  will-change: backdrop-filter;
+  pointer-events: none;
+}
+
+#WarningOverlay {
+  z-index: 1080;
+  inset: 0;
+  position: absolute;
+  pointer-events: auto;
 }
